# document-ai

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backends/: BACKENDS_SPEC.md
backends/blob/: BLOB_SPEC.md  base.py
backends/llm/: LLM_SPEC.md
backends/logging/: LOGGING_SPEC.md  base.py  models.py
backends/orchestration/: ORCHESTRATION_SPEC.md
backends/queue/: QUEUE_SPEC.md  base.py  models.py
backends/record/: RECORD_SPEC.md  base.py  models.py
backends/tooling/: TOOLING_SPEC.md
backends/vector/: VECTOR_SPEC.md  base.py  models.py
common/: COMMON_SPEC.md  enums.py
common/llm/: __init__.py  llm_backend.py
common/models/: capability_registry.py  chunk.py  document.py  entry.py  indexed.py  parse.py  tree.py
common/orchestration/: __init__.py  enums.py  models.py  orchestrator.py
common/tooling/: __init__.py  tool.py
infrastructure/: INFRASTRUCTURE_SPEC.md
libs/: LIBS_SPEC.md
libs/chunker/: CHUNKER_SPEC.md  base.py  registry.py
libs/distiller/: DISTILLER_SPEC.md  base.py  models.py  registry.py
libs/indexer/: INDEXER_SPEC.md  base.py  registry.py
libs/merger/: MERGER_SPEC.md  base.py  registry.py
libs/parser/: PARSER_SPEC.md  base.py  registry.py
libs/profiler/: PROFILER_SPEC.md  base.py  registry.py
pipelines/: PIPELINES_SPEC.md
pipelines/distillation/: DISTILLATION_PIPELINE_SPEC.md  base.py
pipelines/ingestion/: INGESTION_PIPELINE_SPEC.md  base.py
pipelines/summarization/: SUMMARIZATION_PIPELINE_SPEC.md  base.py
services/: SERVICES_SPEC.md
(+101 files in other folders)
