[project]
name = "document-ai"
version = "0.1.0"
description = "A modular, production-grade platform for intelligent document ingestion, semantic search, and retrieval-augmented generation (RAG)."
requires-python = ">=3.11"
dependencies = [
    "python-magic>=0.4.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "libs", "backends", "infrastructure", "pipelines", "services"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
